<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Bitcoin Map</string>

    <string name="action_add_place">Add place</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="action_done">Done</string>

    <string name="notification_new_place">New place in your area</string>

    <string name="pref_distance_units">Distance units</string>

    <string name="settings">Settings</string>
    <string name="name_unknown">Unknown</string>
    <string name="not_provided">Not provided</string>
    <string name="share_place_message_title">Check it out!</string>
    <string name="share_place_message_text">This place accepts cryptocurrency: %1$s</string>
    <string name="saa_distance">Distance:</string>
    <string name="search">Search</string>
    <string name="kilometers_short">km</string>
    <string name="miles_short">mi</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="opening_hours">Opening hours</string>
    <string name="notification_area_activity_title">Notification area</string>
    <string name="suggest_an_edit">Suggest an edit</string>
    <string name="place_is_closed">This place does not exist or closed or no longer accept crypto currency</string>
    <string name="set_location">Set location</string>
    <string name="change_location">Change location</string>
    <string name="place_location">Place location</string>
    <string name="name_is_not_specified">Name is not specified</string>
    <string name="location_is_not_specified">Location is not specified</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="authorization_hint">You can use Bitcoin World Map anonymously but only authorized users are allowed to add or edit places. This helps us to prevent spam.</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_item_exchange_rates">Exchange rates</string>
    <string name="menu_item_notification_area">Notification area</string>
    <string name="menu_item_chat">Chat</string>
    <string name="menu_item_settings">Settings</string>
    <string name="guest">Guest</string>
    <string name="more_features_coming_soon">More features coming soon</string>
    <string name="could_not_submit_changes">Couldn\'t submit changes</string>
    <string name="clear_search">Clear search</string>

    <string name="new_place_notifications">New places in your area</string>

    <string name="place_has_been_added">Place has been added</string>
    <string name="your_edits_have_been_submitted">Your edits have been submitted</string>
    <string name="uploading_changes">Uploading changes</string>
    <string name="places">Places</string>

    <string name="something_went_wrong">Whoops, something went wrong…</string>

    <string name="currency">Currency</string>
    <string name="icon">Icon</string>
    <string name="donation_title">You can make a financial contribution by sending money to this address</string>
    <string name="copy">Copy</string>
    <string name="support_this_project">Support this project</string>
    <string name="code_contribution_title">If you\'d like to make a code contribution you can check out our GitHub repository</string>
    <string name="open_github_repository">Open GitHub repository</string>
    <string name="bitcoin_map_donation_address">Bitcoin map donation address</string>
    <string name="address_have_been_copied">Address have been copied</string>
    <string name="shrink">Shrink</string>
    <string name="expand">Expand</string>
    <string name="d_km">%1$d km</string>
    <string name="accepted_currencies">Accepted currencies</string>
    <string name="authorization">Authorization</string>
    <string name="i_have_an_account">I Have an Account</string>
    <string name="permissions_explanation">Bitcoin World Map does not require any special permissions although the app will work better if you allow it to use your storage (to save the map) and use your location (to show in on the map and notify you about any new Bitcoin accepting places nearby).</string>
    <string name="done">Done</string>
    <string name="permissions">Permissions</string>
    <string name="continue_to_map">Continue</string>

    <string-array name="distance_units">
        <item>Automatic</item>
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>

    <plurals name="confirmed_by_d_users">
        <item quantity="one">Confirmed by %d user</item>
        <item quantity="other">Confirmed by %d users</item>
    </plurals>

    <plurals name="marked_as_closed_by_d_users">
        <item quantity="one">Marked as closed by %d user</item>
        <item quantity="other">Marked as closed by %d users</item>
    </plurals>

    <plurals name="places">
        <item quantity="one">Place</item>
        <item quantity="other">Places</item>
    </plurals>

</resources>