<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/suggest_an_edit" />

    <ViewSwitcher
        android:id="@+id/state_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/closed_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#11000000"
                    android:padding="16dp"
                    android:text="@string/place_is_closed" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.4"
                        android:background="@color/black" />

                    <Button
                        android:id="@+id/change_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?selectableItemBackground"
                        android:padding="16dp"
                        android:text="@string/change_location"
                        android:textColor="@color/white" />

                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/website"
                        android:inputType="textUri" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="textMultiLine|textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/opening_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/opening_hours"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </ViewSwitcher>

</FrameLayout>