<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <View
        android:id="@+id/mapHeaderShadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:alpha="0.5"
        android:background="@drawable/shape_place_details_shadow" />

    <LinearLayout
        android:id="@+id/mapHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_header_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="24dp"
            android:paddingEnd="8dp"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            tools:text="Place name" />

        <ImageView
            android:id="@+id/checkMark"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_check_circle"
            android:tint="@color/green_700" />

        <ImageView
            android:id="@+id/warning"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_warning"
            android:tint="@color/red_500" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/placeSummaryToolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="?homeAsUpIndicator" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/openedClaims"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_700"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Confirmed by 1 user" />

            <TextView
                android:id="@+id/closedClaims"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red_500"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="Marked as closed by 1 user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/ic_phone"
                    android:tint="@color/text_secondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="@color/text_secondary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:paddingStart="0dp"
                        android:paddingEnd="16dp"
                        android:text="@string/not_provided"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/ic_globe"
                    android:tint="@color/text_secondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textColor="@color/text_secondary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="16dp"
                        android:text="@string/not_provided"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/ic_description"
                    android:tint="@color/text_secondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/text_secondary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="16dp"
                        android:text="@string/not_provided"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/ic_access_time"
                    android:tint="@color/text_secondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opening_hours"
                        android:textColor="@color/text_secondary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/openingHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="16dp"
                        android:text="@string/not_provided"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>